project/force-app/main/default/objects/Opportunity/fields/Payment_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Payment_Tracking__c</fullName>
    <label>Payment Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pay 30%</fullName>
            </value>
            <value>
                <fullName>Pay 50%</fullName>
            </value>
            <value>
                <fullName>Pay 100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>