project/force-app/main/default/objects/Opportunity/fields/Payment_When_Completed_Construction__c.field-meta.xml
<CustomField>
    <fullName>Payment_When_Completed_Construction__c</fullName>
    <label>Payment When Completed Construction</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>