project/force-app/main/default/objects/Opportunity/fields/Reference_Account__c.field-meta.xml
<CustomField>
    <fullName>Reference_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Reference_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>