project/force-app/main/default/objects/Opportunity/fields/Relocation_Costs__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Costs__c</fullName>
    <label>Relocation Costs</label>
    <description>CSKH Điền số tiền và đính kèm số điền phê duyệt</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>