project/force-app/main/default/objects/Opportunity/fields/Relocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Date__c</fullName>
    <description>Ngày Nhận mặt bằng</description>
    <label>Relocation Date</label>
    <type>Date</type>
</CustomField>