project/force-app/main/default/objects/Opportunity/fields/Rent_And_Service_Fee_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_And_Service_Fee_Calculation_Date__c</fullName>
    <label>Rent And Service Fee Calculation Date</label>
    <type>Date</type>
</CustomField>