project/force-app/main/default/objects/Opportunity/fields/Rent_Price__c.field-meta.xml
<CustomField>
    <fullName>Rent_Price__c</fullName>
    <description>Nhập và chỉnh sửa bằng USD
Help Text: (USD/m2/Tháng)</description>
    <label>Rent Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>