project/force-app/main/default/objects/Opportunity/fields/Rent_Price_Support_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Price_Support_End_Date__c</fullName>
    <label>Rent Price Support End Date</label>
    <type>Date</type>
</CustomField>