project/force-app/main/default/objects/Opportunity/fields/Rental_Area__c.field-meta.xml
<CustomField>
    <fullName>Rental_Area__c</fullName>
    <label>Rental Area (m2)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>