project/force-app/main/default/objects/Opportunity/fields/Rental_Area_Including_ShopWindow__c.field-meta.xml
<CustomField>
    <fullName>Rental_Area_Including_ShopWindow__c</fullName>
    <label>Rental Area Including Shop-Window</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Included;</fullName>
            </value>
            <value>
                <fullName>Not included</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>