project/force-app/main/default/objects/Opportunity/fields/Rental_Deposit_By_Char__c.field-meta.xml
<CustomField>
    <fullName>Rental_Deposit_By_Char__c</fullName>
    <label>Rental Deposit (By Char)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>