project/force-app/main/default/objects/Opportunity/fields/Rental_Deposit_By_Number__c.field-meta.xml
<CustomField>
    <fullName>Rental_Deposit_By_Number__c</fullName>
    <label>Rental Deposit (By Number)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>