project/force-app/main/default/objects/Opportunity/fields/Rental_Price__c.field-meta.xml
<CustomField>
    <fullName>Rental_Price__c</fullName>
    <label>Proposed Rental Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>