project/force-app/main/default/objects/Opportunity/fields/Reservation_Deposit_By_Char__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Deposit_By_Char__c</fullName>
    <label>Reservation Deposit (By Char)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>