project/force-app/main/default/objects/Opportunity/fields/Reservation_Deposit_By_Number__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Deposit_By_Number__c</fullName>
    <label>Reservation Deposit (By Number)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>