project/force-app/main/default/objects/Opportunity/fields/Revenue_Shared__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Shared__c</fullName>
    <label>% Revenue Shared</label>
    <description>- Bắt buộc nhập nếu Opp. Type = Chia Sẻ Doanh Thu Theo Không Chặn Dưới; Chia Sẻ Doanh Thu Có Chặn Dưới; Chia Sẻ Doanh Thu Cộng Giá Cố Định;
- Dynamic layout tương ứng trường bắt buộc nhập</description>
    <type>Percent</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>