project/force-app/main/default/objects/Opportunity/fields/RO__c.field-meta.xml
<CustomField>
    <fullName>RO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Outlet</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Opportunity</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>