project/force-app/main/default/objects/Opportunity/fields/RO_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>RO_Handover_Date__c</fullName>
    <label>RO Handover Date</label>
    <description>Bắt buộc phải có Ngày Bàn Giao Mặt Bằng mới được chuyển sang Trạng Thái = Cọc</description>
    <type>Date</type>
</CustomField>