project/force-app/main/default/objects/Opportunity/fields/RO_Name__c.field-meta.xml
<CustomField>
    <fullName>RO_Name__c</fullName>
    <label>RO Name</label>
    <description>Chỉ hiển thị những RO thuộc Dự Án được chọn ở trường Tên Dự Án</description>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipName>RO_Names</relationshipName>
</CustomField>