project/force-app/main/default/objects/Opportunity/fields/SAP_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Opportunity_ID__c</fullName>
    <externalId>true</externalId>
    <label>SAP Integration ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>