project/force-app/main/default/objects/Opportunity/fields/Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee__c</fullName>
    <description>Nhập và chỉnh sửa bằng USD
Help Text: (USD/m2/Tháng)</description>
    <label>Service Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>