project/force-app/main/default/objects/Opportunity/fields/Service_Fee_Include_Air_Conditioning_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Include_Air_Conditioning_Fee__c</fullName>
    <label>Service Fee Include Air Conditioning Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Included;</fullName>
            </value>
            <value>
                <fullName>Not included</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>