project/force-app/main/default/objects/Opportunity/fields/Service_Fee_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Start_Month__c</fullName>
    <label>Service Fee Start Month</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>