project/force-app/main/default/objects/Opportunity/fields/Service_Fee_Support_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Support_End_Date__c</fullName>
    <label>Service Fee Support End Date</label>
    <type>Date</type>
</CustomField>