project/force-app/main/default/objects/Opportunity/fields/Signed_OTL_Completion__c.field-meta.xml
<CustomField>
    <fullName>Signed_OTL_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>- Bắt buộc nhập khi chuyển sang trạng thái OTL</description>
    <label>Signed OTL Completion</label>
    <type>Checkbox</type>
</CustomField>