project/force-app/main/default/objects/Opportunity/fields/Start_Deposit_Interest_Deadline_Month__c.field-meta.xml
<CustomField>
    <fullName>Start_Deposit_Interest_Deadline_Month__c</fullName>
    <label>Deposit Interest Duration (Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>