project/force-app/main/default/objects/Opportunity/fields/Stopping_Old_Store_Date__c.field-meta.xml
<CustomField>
    <fullName>Stopping_Old_Store_Date__c</fullName>
    <description>Ngày Thanh Lý Hợp Đồng Cũ</description>
    <label>Stopping Old Store Date</label>
    <type>Date</type>
</CustomField>