project/force-app/main/default/objects/Opportunity/fields/Stopping_Old_Store_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Stopping_Old_Store_Deadline__c</fullName>
    <label>Stopping Old Store Deadline</label>
    <type>Date</type>
</CustomField>