project/force-app/main/default/objects/Opportunity/fields/Stopping_Old_Store_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Stopping_Old_Store_Notification_Date__c</fullName>
    <label>Stopping Old Store Notification Date</label>
    <type>Date</type>
</CustomField>