project/force-app/main/default/objects/Opportunity/fields/Submission_Construction_Design_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Construction_Design_Date__c</fullName>
    <label>Submission Construction Design Date</label>
    <type>Date</type>
</CustomField>