project/force-app/main/default/objects/Opportunity/fields/Survey_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Appointment_Date__c</fullName>
    <label>Survey Appointment Date</label>
    <type>Date</type>
</CustomField>