project/force-app/main/default/objects/Opportunity/fields/Survey_Phase_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Phase_Transition_Date__c</fullName>
    <description>Không hiện lên layout</description>
    <label>Survey Phase Transition Date</label>
    <type>Date</type>
</CustomField>