project/force-app/main/default/objects/Opportunity/fields/Total_Actual_Voucher_Support_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Voucher_Support_Amount__c</fullName>
    <label>Total Actual Voucher Support Amount</label>
    <description>Help Text: Tổng Tiền Hỗ Trợ Voucher Thực Tế = Số Tháng Hỗ Trợ Voucher * Tiền Voucher Hỗ Trợ Thực Tế</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>