project/force-app/main/default/objects/Opportunity/fields/Total_Air_Conditioning_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Air_Conditioning_Fee__c</fullName>
    <label>Total Air Conditioning Fee</label>
    <description>Nhập và chỉnh sửa bằng USD
- TTTM: Đơn Giá Phí Điều Hoà/m2/Tháng * Diện Tích (m2). Hệ thống quy đổi ra Tổng Phí Điều Hoà/Tháng theo VNĐ.
- Chỉ hiện nếu chọn &quot;Có Phụ Phí&quot;</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>