project/force-app/main/default/objects/Opportunity/fields/Total_Electricity_Price_Add_on__c.field-meta.xml
<CustomField>
    <fullName>Total_Electricity_Price_Add_on__c</fullName>
    <label>Total Electricity Price Add on</label>
    <description>Roll Up Summarize trên Opp Product của field Electricity Price Add on
Chỉ áp dụng cho QC</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>