project/force-app/main/default/objects/Opportunity/fields/Total_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price__c</fullName>
    <description>Roll Up Summarize trên Opp Product của field Total List Price
Chỉ áp dụng cho QC</description>
    <label>Total List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>