project/force-app/main/default/objects/Opportunity/fields/Total_Outdoor_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Outdoor_Price__c</fullName>
    <description>Nhập và chỉnh sửa bằng USD
Help Text: USD/Tháng</description>
    <label>Total Outdoor Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>