project/force-app/main/default/objects/Opportunity/fields/Total_Overtime_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Overtime_Fee__c</fullName>
    <description>Nhập và chỉnh sửa bằng USD
Chỉ hiện nếu chọn &quot;Có Phụ Phí&quot;</description>
    <label>Total Overtime Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>