project/force-app/main/default/objects/Opportunity/fields/Total_Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Difference__c</fullName>
    <label>Total Price Difference</label>
    <description>Tổng Giá Bán/ Tổng Giá NS
Chỉ áp dụng cho QC</description>
    <type>Percent</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>