project/force-app/main/default/objects/Opportunity/fields/Total_Rent_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent_Price__c</fullName>
    <label>Total Rent Price</label>
    <description>- Nhập và chỉnh sửa bằng USD
- TTTM
+ Tổng Tiền Thuê = Giá Cố Định * Diện Tích (m2)  nếu Phân Loại Cơ Hội Bán Hàng = Giá Cố Định hoặc Chia Sẻ Doanh Thu Cộng Giá Cố Định;
+ Tổng Giá Thuê = Mức Chặn Dưới * Diện Tích (m2) nếu Phân Loại Cơ Hội Bán Hàng = Chia Sẻ Doanh Thu Có Chặn Dưới;
- KPTM
+ Tổng Tiền Thuê = Giá Cố Định * (Diện Tích Đất Sử Dụng + Diện Tích Ngoài Trời) nếu Phân Loại Cơ Hội Bán Hàng = Giá Cố Định hoặc Chia Sẻ Doanh Thu Cộng Giá Cố Định và Thuê Ngoài Trời = Check
+ Tổng Giá Thuê = Giá Cố Định * Diện Tích Đất Sử Dụng nếu Phân Loại Cơ Hội Bán Hàng = Giá Cố Định hoặc Chia Sẻ Doanh Thu Cộng Giá Cố Định và Thuê Ngoài Trời = UnCheck
+ Tổng Tiền Thuê = Mức Chặn Dưới * (Diện Tích Đất Sử Dụng + Diện Tích Ngoài Trời) nếu Phân Loại Cơ Hội Bán Hàng = Chia Sẻ Doanh Thu Có Chặn Dưới và Thuê Ngoài Trời = Check
+ Tổng Tiền Thuê = Mức Chặn Dưới * Diện Tích Đất Sử Dụng nếu Phân Loại Cơ Hội Bán Hàng = Chia Sẻ Doanh Thu Có Chặn Dưới và Thuê Ngoài Trời = UnCheck
- Help Text: USD/Tháng</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>