project/force-app/main/default/objects/Opportunity/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <label>Total Sales Price</label>
    <description>- Không hiển thị layout (hiển thị Compact Layout của Opp KDQC)
Field này là tổng giá bán của KDQC
Còn sau khi duyệt BCC chấp thuận của Opp Leasing (TTTM &amp; KPTM) thì update lên field Amount</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>