project/force-app/main/default/objects/Opportunity/fields/Total_Service_Fee_Add_on__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Fee_Add_on__c</fullName>
    <description>Roll Up Summarize trên Opp Product của field Service Fee Add on
Chỉ áp dụng cho QC</description>
    <label>Total Service Fee Add on</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>