project/force-app/main/default/objects/Opportunity/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <description>Default 8% và cho phép sửa</description>
    <label>% VAT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>