project/force-app/main/default/objects/Opportunity/fields/Working_Time_At_RO__c.field-meta.xml
<CustomField>
    <fullName>Working_Time_At_RO__c</fullName>
    <label>Working Time At RO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>