project/force-app/main/default/objects/Opportunity/recordTypes/Ad_Lease.recordType-meta.xml
<RecordType>
    <fullName>Ad_Lease</fullName>
    <active>true</active>
    <businessProcess>Ad_Lease</businessProcess>
    <label>Lease Ad Location</label>
</RecordType>