project/force-app/main/default/objects/Opportunity/recordTypes/New_Lease_KPTM.recordType-meta.xml
<RecordType>
    <fullName>New_Lease_KPTM</fullName>
    <active>true</active>
    <businessProcess>New_Lease_KPTM</businessProcess>
    <label>New Lease Commercial Townhouse</label>
</RecordType>