project/force-app/main/default/objects/Opportunity/recordTypes/New_Lease_TTTM.recordType-meta.xml
<RecordType>
    <fullName>New_Lease_TTTM</fullName>
    <active>true</active>
    <businessProcess>New_Lease_TTTM</businessProcess>
    <label>New Lease Shopping Mall</label>
</RecordType>