project/force-app/main/default/objects/Opportunity/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <businessProcess>Renewal</businessProcess>
    <label>Contract Renewal</label>
</RecordType>