project/force-app/main/default/objects/Opportunity/validationRules/Require_BCC_For_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_BCC_For_Closed_Won</fullName>
    <active>true</active>
    <description>Ngăn không cho chuyển Stage sang Closed Won nếu chưa có phiếu BCC nào được tạo.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Closed Won&quot;),
  Active_BCC_Count__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>LỖI NGHIỆP VỤ: Bắt buộc phải tạo Báo Cáo Chốt (BCC) trước khi Win Deal (Closed Won). Vui lòng tạo và trình duyệt BCC!</errorMessage>
</ValidationRule>