project/force-app/main/default/objects/Opportunity/validationRules/Require_TaxCode_Chot_Khach.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_TaxCode_Chot_Khach</fullName>
    <active>true</active>
    <description>Tax_Code on Account is required when Stage = Closing for Business</description>
    <errorConditionFormula>ISPICKVAL(StageName, 'Closing') 
&amp;&amp; ISBLANK(Account_Tax_Code__c) 
&amp;&amp; Account.RecordType.DeveloperName = 'Business_Tenant'</errorConditionFormula>
    <errorMessage>Tax code of Tenant (Account) cannot be empty when closing.</errorMessage>
</ValidationRule>