project/force-app/main/default/objects/Opportunity/listViews/My_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Opportunities</label>
</ListView>